# VIRTUAL_IN_MEMORY_FILE_SYSTEM

./: README.md
VirtualFileSystem/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
VirtualFileSystem/include/: Command.h  CommandBuilder.h  CommandFactory.h  CommandInvoker.h  FileOperations.h  FileSystem.h  FileSystemException.h  VirtualFullHandler.h
VirtualFileSystem/src/: Command.cpp  CommandFactory.cpp  CommandInvoker.cpp  FileSystem.cpp  main.cpp
